--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "echo 'No build step needed'"
   },
   "author": "",
   "license": "ISC",
